feat(signup): add /signup route
